--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,14 +1,14 @@
 {
   "current": {
     "color_scheme": "scheme-1",
-    "menu_bg_color": "#1b2144",
-    "header_link": "#ffffff",
+    "menu_bg_color": "#ffffff",
+    "header_link": "#000000",
     "submenu_bg_color": "#fcfbf9",
     "submenu_link_color": "#212121",
-    "menu_transparent_color": "#fcfbf9",
+    "menu_transparent_color": "#000000",
     "sale_color": "#212121",
     "type_nav_font": "futura_n4",
-    "nav_font_size": 18,
+    "nav_font_size": 1.1,
     "nav_letter_spacing": 100,
     "type_nav_caps": false,
     "type_base_font": "futura_n4",
@@ -49,8 +49,8 @@
     "show_scroll_top_button": true,
     "empty_search_menu": "footer",
     "empty_search_product_list": [],
-    "instagram_link": "https://instagram.com/shopify",
-    "tiktok_link": "https://tiktok.com/@shopify",
+    "instagram_link": "https:\/\/instagram.com\/shopify",
+    "tiktok_link": "https:\/\/tiktok.com\/@shopify",
     "product_grid_font_size": "body-small",
     "product_grid_center": true,
     "overlay_text": false,
@@ -78,7 +78,7 @@
     "sibling_style": "swatch",
     "collection_swatch_style": "limited",
     "swatch_color_list": "Black: #000000\nWhite: #fafafa\nBlank: blank.png\nBronze: #A07636\nSilver: #CECBC7",
-    "favicon": "shopify://shop_images/BREZ-Square.png",
+    "favicon": "shopify:\/\/shop_images\/BREZ-Square.png",
     "free_shipping_limit": "150",
     "show_lock_icon": true,
     "enable_accept_terms": false,
@@ -338,8 +338,8 @@
       "product_grid_outline": false,
       "enable_superscript": true,
       "show_scroll_top_button": true,
-      "instagram_link": "https://instagram.com/shopify",
-      "tiktok_link": "https://tiktok.com/@shopify",
+      "instagram_link": "https:\/\/instagram.com\/shopify",
+      "tiktok_link": "https:\/\/tiktok.com\/@shopify",
       "product_grid_center": true,
       "product_grid_aspect_ratio": 1.1,
       "sale_bg_color": "#e9d2c2",
@@ -615,9 +615,9 @@
       "product_grid_outline": false,
       "enable_superscript": true,
       "show_scroll_top_button": true,
-      "instagram_link": "https://instagram.com/shopify",
-      "tiktok_link": "https://tiktok.com/@shopify",
-      "tumblr_link": "http://shopify.tumblr.com",
+      "instagram_link": "https:\/\/instagram.com\/shopify",
+      "tiktok_link": "https:\/\/tiktok.com\/@shopify",
+      "tumblr_link": "http:\/\/shopify.tumblr.com",
       "youtube_link": "",
       "product_grid_center": true,
       "product_grid_aspect_ratio": 1.2,
@@ -937,10 +937,10 @@
       "product_grid_outline": false,
       "enable_superscript": true,
       "show_scroll_top_button": true,
-      "instagram_link": "https://instagram.com/shopify",
-      "facebook_link": "https://facebook.com/shopify",
-      "tiktok_link": "https://tiktok.com/@shopify",
-      "pinterest_link": "https://pinterest.com/shopify",
+      "instagram_link": "https:\/\/instagram.com\/shopify",
+      "facebook_link": "https:\/\/facebook.com\/shopify",
+      "tiktok_link": "https:\/\/tiktok.com\/@shopify",
+      "pinterest_link": "https:\/\/pinterest.com\/shopify",
       "product_grid_aspect_ratio": 1.3,
       "sale_bg_color": "#c64113",
       "sale_text_color": "#ffffff",
@@ -1211,9 +1211,9 @@
       "product_grid_outline": true,
       "enable_superscript": true,
       "show_scroll_top_button": true,
-      "instagram_link": "https://instagram.com/shopify",
-      "facebook_link": "https://facebook.com/shopify",
-      "tiktok_link": "https://tiktok.com/@shopify",
+      "instagram_link": "https:\/\/instagram.com\/shopify",
+      "facebook_link": "https:\/\/facebook.com\/shopify",
+      "tiktok_link": "https:\/\/tiktok.com\/@shopify",
       "overlay_text": false,
       "product_grid_aspect_ratio": 1,
       "sale_bg_color": "#001da3",
@@ -1518,8 +1518,8 @@
       "product_grid_outline": false,
       "enable_superscript": true,
       "show_scroll_top_button": true,
-      "instagram_link": "https://instagram.com/shopify",
-      "tiktok_link": "https://tiktok.com/@shopify",
+      "instagram_link": "https:\/\/instagram.com\/shopify",
+      "tiktok_link": "https:\/\/tiktok.com\/@shopify",
       "product_grid_aspect_ratio": 1.2,
       "sale_bg_color": "#f1a843",
       "sale_text_color": "#fafafa",
