Product Block Module -- woking

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -35,18 +35,21 @@
     "heading_large_mobile": 36,
     "heading_x_large_mobile": 40,
     "type_btn_font": "karla_n4",
-    "btn_border_style": "square",
-    "btn_size": 14,
-    "btn_letter_spacing": 25,
+    "btn_border_style": "pill",
+    "btn_size": 15,
+    "btn_letter_spacing": 50,
+    "btn_caps": false,
     "grid_style": "classic",
-    "dots_style": "line",
+    "dots_style": "circle",
     "icon_style": "1",
-    "show_gray_bg": true,
-    "parallax_enable": false,
+    "show_gray_bg": false,
+    "parallax_enable": true,
     "parallax_strength": 20,
     "product_grid_outline": false,
     "enable_superscript": true,
     "show_scroll_top_button": true,
+    "loading_image_1": "shopify:\/\/shop_images\/BREZ_Logo.png",
+    "loading_image_width": 120,
     "empty_search_menu": "footer",
     "empty_search_product_list": [],
     "instagram_link": "https:\/\/instagram.com\/shopify",
@@ -103,11 +106,11 @@
       "scheme-1": {
         "settings": {
           "section_text": "#212121",
-          "section_bg": "#fafafa",
+          "section_bg": "#ffffff",
           "section_bg_light": "#ffffff",
           "section_bg_gradient": "",
-          "btn_primary_bg": "#212121",
-          "btn_primary_text": "#ffffff",
+          "btn_primary_bg": "#e3f98a",
+          "btn_primary_text": "#000000",
           "btn_primary_border": "#212121",
           "btn_secondary_bg": "#1b2144",
           "btn_secondary_text": "#ffffff",
