--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -300,6 +300,24 @@
           "overlay": "#000000",
           "links": "#282c2e"
         }
+      },
+      "scheme-590b0a64-4958-403a-86fc-4b0b784b17ff": {
+        "settings": {
+          "section_text": "#212121",
+          "section_bg": "rgba(0,0,0,0)",
+          "section_bg_light": "#ffffff",
+          "section_bg_gradient": "",
+          "btn_primary_bg": "#e3f98a",
+          "btn_primary_text": "#000000",
+          "btn_primary_border": "#212121",
+          "btn_secondary_bg": "#1b2144",
+          "btn_secondary_text": "#ffffff",
+          "btn_secondary_border": "#1b2144",
+          "accent": "#1b2144",
+          "lines_and_border": "#d1cdc4",
+          "overlay": "#000000",
+          "links": "#282c2e"
+        }
       }
     }
   },
